
[workspace]
members = ["youtube-transcript", "summarizer"]
resolver = "2"


[workspace.package]
edition = "2021"
version = "0.3.0"
repository = "https://github.com/akhildevelops/summarizer"

[workspace.dependencies]
async-openai = { version = "~0.10" }
tokio = { version = "~1.27", features = ["macros", "rt-multi-thread"] }
serde_json = { version = "~1.0" }
serde = { version = "~1.0", features = ["derive"] }
roxmltree = { version = "~0.18" }
reqwest = { version = "~0.11" }
clap = { version = "4.2.1", features = ["string"] }
once_cell = { version = "~1.17" }
[profile.release]
panic = "abort"
lto = "fat"
debug-assertions = false
strip = true
