[package]
name = "summarizer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sqlx = { workspace = true, features = ["postgres", "runtime-tokio-native-tls"] }
async-openai = { workspace = true }
youtube-transcript = { path = "../youtube-transcript" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
apalis = { workspace = true, features = ["postgres", "extensions"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls"] }
anyhow = { workspace = true }
