[package]
name = "summarizer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = { workspace = true }
youtube-transcript = { path = "../youtube-transcript" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
apalis = { workspace = true, features = ["postgres", "extensions"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls"] }
anyhow = { workspace = true }
chrono = { workspace = true }
tiktoken-rs = { version = "~0.4" }
futures = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
axum = { workspace = true }
axum-core = { version = "~0.3.4" }
serde_json = { workspace = true }
