[package]
name = "summarizer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
async-openai = { workspace = true }
youtube-transcript = { path = "../youtube-transcript" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
apalis = { workspace = true, features = ["postgres", "extensions"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["postgres"] }
openssl = { version = "0.10", features = ["vendored"] }
anyhow = { workspace = true }
chrono = { workspace = true }
tiktoken-rs = { version = "~0.4" }
futures = { workspace = true, features = ["executor"] }
env_logger = { workspace = true }
log = { workspace = true }
axum-core = { version = "~0.3.4" }
serde_json = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum-extra = { version = "0.7" }
