[package]
name = "youtube-transcript"
description = "Transcripts Youtube"
version.workspace = true
edition.workspace = true
license = "MIT"
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
roxmltree = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
