[package]
name = "youtube-transcript"
description = "Transcripts Youtube"
version.workspace = true
edition.workspace = true
license = "MIT"
readme = "Readme.md"
repository.workspace = true


[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
roxmltree = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
once_cell = { workspace = true }

[lib]
doctest = false
